# django-app-permissions-access-request

./: MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/: python-publish.yml
django_app_permissions_access_request/: apps.py  models.py  urls.py
django_app_permissions_access_request.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_app_permissions_access_request/migrations/: 0001_initial.py
django_app_permissions_access_request/templates/: approval_list.html
