[metadata]
name = django_app_permissions_access_request
version = 0.0.0
description = Control and request access
long_description = file: README.rst
url = https://github.com/amp89/django-app-permissions-access-request
author = Alex Peterson
license_file = LICENSE

[options]
include_package_data = true
packages = find:
